--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "cross-env HOST=0.0.0.0 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "NODE_ENV=production nuxtent generate",
+    "generate": "HOST=wi-cuckoo.github.io PORT=80 NODE_ENV=production nuxtent generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
