--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "json-loader": "^0.5.7",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1"
   }
