--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^2.1.0",
     "@nuxtjs/markdownit": "^1.1.0",
+    "moment": "^2.22.2",
     "nuxt": "^1.0.0-rc6",
     "nuxtent": "^0.2.77",
     "vuetify": "^0.15"
